unpackaged/main/default/objects/SDO_Service_Queue_Stat__c/SDO_Service_Queue_Stat__c.object-meta.xml
<CustomObject>
    <description>What: believed to be used for service reporting and dashboards.</description>
    <label>Queue Stat</label>
    <nameField>
        <label>Queue Stat Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Queue Stats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>