unpackaged/main/default/objects/SDO_Service_Queue_Stat__c/fields/Abandon_Rate__c.field-meta.xml
<CustomField>
    <fullName>Abandon_Rate__c</fullName>
    <formula>Abandoned_Calls__c / Inbound_Calls__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Abandon Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>