unpackaged/main/default/objects/SDO_Service_Queue_Stat__c/fields/Abandoned_Calls__c.field-meta.xml
<CustomField>
    <fullName>Abandoned_Calls__c</fullName>
    <label>Abandoned Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>