unpackaged/main/default/objects/SDO_Service_Queue_Stat__c/fields/Avg_Queue_Time__c.field-meta.xml
<CustomField>
    <fullName>Avg_Queue_Time__c</fullName>
    <label>Avg Queue Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>