unpackaged/main/default/objects/SDO_Service_Queue_Stat__c/fields/Calls_Per_Agent__c.field-meta.xml
<CustomField>
    <fullName>Calls_Per_Agent__c</fullName>
    <label>Calls Per Agent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>