unpackaged/main/default/objects/SDO_Service_Queue_Stat__c/fields/Calls_Queued__c.field-meta.xml
<CustomField>
    <fullName>Calls_Queued__c</fullName>
    <label>Calls Queued</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>