unpackaged/main/default/objects/SDO_Service_Queue_Stat__c/fields/db_days_Date__c.field-meta.xml
<CustomField>
    <fullName>db_days_Date__c</fullName>
    <description>This is for the Perfect Date Wizard Tool (v2)</description>
    <label>Date__c db days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>