unpackaged/main/default/objects/SDO_Service_Queue_Stat__c/fields/dbdays__c.field-meta.xml
<CustomField>
    <fullName>dbdays__c</fullName>
    <label>db_days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>