unpackaged/main/default/objects/SDO_Service_Queue_Stat__c/fields/Longest_Queue_Time__c.field-meta.xml
<CustomField>
    <fullName>Longest_Queue_Time__c</fullName>
    <label>Longest Queue Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>