unpackaged/main/default/objects/SDO_Service_Queue_Stat__c/fields/Outbound_Calls__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Calls__c</fullName>
    <label>Outbound Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>