unpackaged/main/default/objects/SDO_Service_Queue_Stat__c/fields/Speed_to_Answer__c.field-meta.xml
<CustomField>
    <fullName>Speed_to_Answer__c</fullName>
    <label>Speed to Answer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>