unpackaged/main/default/objects/SDO_Service_Queue_Stat__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Date__c</columns>
    <columns>Inbound_Calls__c</columns>
    <columns>Outbound_Calls__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>